Object's draw_type resets when removing smoke #35173

Closed
opened 2013-05-01 20:38:47 +02:00 by Ray Mairlot · 5 comments

%%%--- Operating System, Graphics card ---

Windows 7 64-bit, Nvidia gtx 570

- Blender version with error, and version that worked ---

Both official 2.66 and r56432 (latest from build.blender.org) have error.

- Short description of error ---

When removing the smoke physics property from an object the objects draw type (set in Display panel in Object tab) gets set to textured. So If an object had it's draw type set to wire and smoke was then added and removed the object would change from wire to textured draw type.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Using attached blend file.

1.Click 'x' next to smoke on physics panel with cube selected to remove smoke properties.
2. View that the cube's display has changed from 'wire' to 'textured'.

%%%

%%%--- Operating System, Graphics card --- Windows 7 64-bit, Nvidia gtx 570 - Blender version with error, and version that worked --- Both official 2.66 and r56432 (latest from build.blender.org) have error. - Short description of error --- When removing the smoke physics property from an object the objects draw type (set in Display panel in Object tab) gets set to textured. So If an object had it's draw type set to wire and smoke was then added and removed the object would change from wire to textured draw type. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Using attached blend file. 1.Click 'x' next to smoke on physics panel with cube selected to remove smoke properties. 2. View that the cube's display has changed from 'wire' to 'textured'. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This is intentional, in object_modifier_remove() - assigning to Daniel.

%%%

%%%This is intentional, in object_modifier_remove() - assigning to Daniel. %%%

%%%On Smoke Init, it switches to wireframe.
Afterwards it should just keep the current mode, as there is no way to know, what the user did in the meantime. %%%

%%%On Smoke Init, it switches to wireframe. Afterwards it should just keep the current mode, as there is no way to know, what the user did in the meantime. %%%
Member

%%%@ Ray: Thanks for reporting. Fixed in svn!

rev 56469:
New behaviour:

  • On creation, smoke modifier only changes the drawtype for domain to WIRE.
  • On deletion, smoke modifier does not change the drawtype.

@ Thomas, Campbell: You are right. I hope you agree with the new behaviour :-)%%%

%%%@ Ray: Thanks for reporting. Fixed in svn! rev 56469: New behaviour: * On creation, smoke modifier only changes the drawtype for domain to WIRE. * On deletion, smoke modifier does not change the drawtype. @ Thomas, Campbell: You are right. I hope you agree with the new behaviour :-)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35173
No description provided.