Fix [#35173] Object's draw_type resets when removing smoke

New behaviour:
* On creation, smoke modifier only changes the drawtype for domain to WIRE.
* On deletion, smoke modifier does not change the drawtype.