source/blender/makesrna/intern/rna_modifier.c
@@ -294,7 +294,6 @@ static void rna_Smoke_set_type(Main *bmain, Scene *scene, PointerRNA *ptr)
 		case MOD_SMOKE_TYPE_COLL:
 		case 0:
 		default:
-			ob->dt = OB_TEXTURE;
 			break;
 	}
 	
